# perth-rental-finder

./: .env.example  .gitignore  DATA_QUALITY.md  DEPLOYMENT.md  README.md  README_PerthRentalFinder.md  agent.py  build_dim_suburb.py  build_fact_rent_trend.py  build_fact_suburb_amenities.py  build_fact_suburb_profile.py  database.py  diagnose7.py  load_bus_proximity.py  main.py  pyproject.toml  rag.py  requirements.txt  schema.sql  test_data_model.py  tools.py
scripts/: 01_download_data.py  02_ingest_duckdb.py  03_build_affordability.py  04_verify.py  fix_bonds.py  fix_crime_scores.py  load_schools.py  load_transport_crime.py  setup_data.py
